Fix resizing columns on mobile
Only tested on Android (Firefox and Chrome).

--- a/src/global.css
+++ b/src/global.css
@@ -17,6 +17,7 @@
   border-radius: 0;
   line-height: inherit;
   touch-action: manipulation;
+  appearance: none;
 }
 
 *:focus {
